[M74] [NTP] Fix :not selectors for fakebox and dark mode
The body:not() selectors were improperly defined, which caused the
fakebox to stay light colored when dark mode was enabled. Combining the
two fixes this issue.

Screencast: https://drive.google.com/open?id=1Y3THliuO6W7GzMsa5_iFRAexexvFVdmQ

Bug: 944624
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1542145
Commit-Queue: Kristi Park <kristipark@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#645062}(cherry picked from commit 318c9de6022ed78012ccaa4b681a3ef667a3bad0 [formerly 32ec2e52d4c1452e133c318dfb5f1dc5eb70ca0c])
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1549888
Cr-Commit-Position: refs/branch-heads/3729@{#637}
Cr-Branched-From: 19260737901ea731c9baac505269e4ad9638530d [formerly d4a8972e30b604f090aeda5dfff68386ae656267]-refs/heads/master@{#638880}
Former-commit-id: 930a17e4e78202bd35acdc61f5fd3b4673c368ef

--- a/chrome/browser/resources/local_ntp/local_ntp.css
+++ b/chrome/browser/resources/local_ntp/local_ntp.css
@@ -153,7 +153,7 @@ body.remove-fakebox #fakebox-container {
   transition: background-color 300ms ease-in-out, opacity 200ms
 }
 
-html[darkmode=true] body:not(.alternate-fakebox) body:not(.light-chip) #fakebox {
+html[darkmode=true] body:not(.alternate-fakebox):not(.light-chip) #fakebox {
   background-color: rgb(var(--GG900-rgb));
 }
 
@@ -176,7 +176,7 @@ html[darkmode=true] .alternate-fakebox #fakebox {
   background-color: rgb(var(--GG200-rgb));
 }
 
-html[darkmode=true] body:not(.alternate-fakebox) body:not(.light-chip) #fakebox:hover {
+html[darkmode=true] body:not(.alternate-fakebox):not(.light-chip) #fakebox:hover {
   background-color: rgb(42, 43, 46);
 }
 
@@ -255,7 +255,7 @@ html[dir=rtl] #fakebox-search-icon {
   white-space: nowrap;
 }
 
-html[darkmode=true] body:not(.alternate-fakebox) body:not(.light-chip) #fakebox-text {
+html[darkmode=true] body:not(.alternate-fakebox):not(.light-chip) #fakebox-text {
   color: rgb(var(--GG200-rgb));
 }
 
@@ -298,7 +298,7 @@ html[dir=rtl] #fakebox-cursor {
   right: 20px;
 }
 
-html[darkmode=true] body:not(.alternate-fakebox) body:not(.light-chip) #fakebox-cursor {
+html[darkmode=true] body:not(.alternate-fakebox):not(.light-chip) #fakebox-cursor {
   background: rgb(var(--GB300-rgb));
 }
 
